Commit con animaciones y gradiante

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1>Evanescence</h1>
+		<h1>
+			<p>E</p>
+			<p>V</p>
+			<p>A</p>
+			<p>N</p>
+			<p>E</p>
+			<p>S</p>
+			<p>C</p>
+			<p>E</p>
+			<p>N</p>
+			<p>C</p>
+			<p>E</p>
+		</h1>
 		<nav>
 			<ul class="headerMenu">
 				<li><a href="index.html">Home</a></li>
@@ -24,8 +36,8 @@
 		</nav>
 	</header>
 	<!--Inicia Section-->
-	<section class="index">
-		<img src="images/Evanescence.jpg">
+	<section class="container">
+		<img src="images/Evanescence.jpg" class="indexImg">
 		<p>Evanescence es una banda de rock estadounidense fundad en Little Rock, Arcansas en 1995, por la cantenta, pianista y compositora Amy Lee y el guitarrista Ben Moody. </p>
 		<p>Actualmente la banda cuenta con:</p>
 		<ul>
