--- a/pages/album.html
+++ b/pages/album.html
@@ -5,13 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Evanecesce - Albums</title>
-	<link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1>
+		<h1 class="banner">
 			<p>E</p>
 			<p>V</p>
 			<p>A</p>
@@ -117,5 +117,7 @@
 			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
 		</ul>
 	</footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
