--- a/pages/contactcs.html
+++ b/pages/contactcs.html
@@ -5,13 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Evanecesce - Contaco</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1>
+		<h1 class="banner">
 			<p>E</p>
 			<p>V</p>
 			<p>A</p>
@@ -35,22 +36,27 @@
 		</nav>
 	</header>
 	<!--Inicia Section-->
-	<section class="contacts">
-        <h2>Contacto</h2>
-            <th><form class="contact" >
-                <label for="name">Name:</label>
-                <input type="name" placeholder="Name" name="name">
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" placeholder="Email" name="email">
-                <br>
-                <label for="message">Message:</label>
-                <textarea cols="30" rows="10" placeholder="Message" name="texto"></textarea>
-                <br>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Reset">
-                </form>
-	</section>
+	<section class="row center">
+		<form >
+			<div class="form-group col-11">
+			  <label for="name" class="col-lg-offset-2" >Nombre</label>
+			  <input type="name" class="form-control" required >
+			</div>
+			<div class="form-group col-11">
+			  <label for="exampleInputEmail1">Email</label>
+			  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+			</div>
+			<div class="form-group col-11">
+			  <label for="exampleFormControlTextarea1">Ingrese mensaje:</label>
+			  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</div>
+			<div class="buttonCenter">
+			   <button  type="submit" class="btn colorB">Enviar</button>
+			   <button type="reset" class="btn colorB">Borrar</button>
+		    </div>
+		</form>		
+	</section>	  
+
 	<!--Pie de Pagina-->
 	<footer>
 		<ul>
@@ -62,4 +68,8 @@
 			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
 		</ul>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+</body>	
 </html>
