--- a/pages/news.html
+++ b/pages/news.html
@@ -11,7 +11,7 @@
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1>
+		<h1 class="banner">
 			<p>E</p>
 			<p>V</p>
 			<p>A</p>
@@ -56,7 +56,7 @@
 	</section> -->
 	<section class="grilla">
 		<div class="img1">
-			<img src="../images/news/ev-news1.jpg" width="700px">
+			<img src="../images/news/ev-news1.jpg" width="400px">
 		</div>
 		<div class="text1">
 			<h2>EVANESCENCE Y HALESTORM EN TOUR POR USA</h2><p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
@@ -66,7 +66,7 @@
 				</p>
 		</div>
 		<div class="img2">
-			<img src="../images/news/ev-news2.jpg" height="255px">
+			<img src="../images/news/ev-news2.jpg" width="400px" height="209px">
 		</div>
 		<div class="text2">
 			<h2>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</h2><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
