--- a/pages/album.html
+++ b/pages/album.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Evanecesce - Albums</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
@@ -34,79 +35,81 @@
 			</ul>
 		</nav>
 	</header>
-	<!--Inicia Section-->
-	<section class="albums">
-        <!--Tabla Fallen-->
-		<table cellspacing="20px" class="fallen">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>Fallen es el primer álbum de estudio de la banda estadounidense Evanescence, 
-                con la discográfica Wind-up Records. Fallen fue lanzado al mercado el 4 de marzo
-                 de 2003 y estuvo sesenta semanas en las listas británicas, alcanzando el primer puesto. 
-                 Sin embargo, en Estados Unidos, el álbum permaneció durante más de cien semanas en las listas 
-                 y su máxima posición fue el segundo puesto.</p></th>    
-            <th><img src="../images/covers/fallen.jpg" alt="" width="350px"></th>
-        </table>
-        <!--Tabla Anywhere-->
-        <table cellspacing="20px" class="any">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5SpQ4sf9sXFWHgUKYCZSDF?utm_source=generator" width="400" 
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>Anywhere but Home es el primer álbum en vivo/DVD de la banda de rock Evanescence, 
-                lanzado el 23 de noviembre 2004 por el sello discográfico Wind-up Records Este incluye
-                 los cuatro vídeos musicales de su álbum anterior, Fallen, una hora de “Detrás de Escenas”, 
-                 y la grabación del concierto en Le Zenith, París.</p></th>
-            <th><img src="../images/covers/anywhere-but-home.jpg" alt="" width="350" height="350"></th>
-        </table>
-        <!--Tabla TOD-->
-        <table cellspacing="20px" class="tod">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lFQ9ihSNR5YD0yi0yTzdC?utm_source=generator" width="400"
-                 height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>The Open Door es el segundo álbum de estudio hecho por la banda de metal gótico estadounidense. 
-                Se lanzaron cuatro sencillos «Call Me When You're Sober», «Lithium», «Sweet Sacrifice» y «Good Enough» 
-                más uno solo promocional «Weight of the World» y el disco se ha promocionado con la gira The Open Door 
-                en tres etapas. The Open Door ha vendido más de 6 millones de copias en todo el mundo.</p></th>
-            <th><img src="../images/covers/tod.jpg" alt="" width="350" height="350"></th>
-        </table>
-        <!--Tabla Evanescence-->
-        <table cellspacing="20" class="evanescence">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3U85Q4GtR0I3VwgDOKHttO?utm_source=generator" width="400" 
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>Evanescence es el tercer álbum de estudio de la banda estadounidense de rock Evanescence. Lanzado al
-                 mercado musical el 11 de octubre de 2011 a través del sello discográfico Wind-up Records, después de 
-                 varios aplazamientos realizados por la misma banda. El proceso de grabación inició el 22 de febrero de 
-                 2010 con el productor Steve Lillywhite en su estudio; pero más tarde dejaron de grabar con él porque 
-                 «no era el adecuado».</p></th>
-            <th><img src="../images/covers/evanescence.jpg" alt="" width="350" height="350"></th>
-        </table>
-        <!--Tabla Lost Whispers-->
-        <table cellspacing="20px" class="lost">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/55VNOaV0zcQqGSrjOBHKVG?utm_source=generator" width="400" 
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>Lost Whispers es el primer álbum recopilatorio de la banda estadounidense de metal Evanescence, 
-                lanzado al mercado el 6 de diciembre de 2016 a través de la discográfica Concord Bicycle Music.</p></th>
-            <th><img src="../images/covers/lost-whispers.png" alt="" width="350" height="350"></th>
-        </table>
-        <!--Tabla Synthesis-->
-        <table cellspacing="20px" class="syn">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2Qg3CxIQ1Urnv700y5jP3j?utm_source=generator" width="400" 
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>Synthesis es el cuarto álbum de estudio de la banda de rock estadounidense Evanescence. 
-                Fue lanzado el 10 de noviembre de 2017 por BMG Rights Management. El álbum incluye versiones 
-                de canciones de trabajos anterior de la banda con un arreglo orquestal y elementos de música electrónica, 
-                además de dos nuevas canciones, lo que lo convierte en un álbum de estudio y un álbum de compilación.</p></th>
-            <th><img src="../images/covers/synthesis.png" alt="" width="350" height="350"></th>
-        </table>
-        <!--Tabla The Bitter Truth-->
-        <table cellspacing="20px" class="tbt">
-            <th><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4MYCjsaDaemi8Lmkj5PzkL?utm_source=generator" width="400" 
-                height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></th>
-            <th><p>The Bitter Truth es el quinto álbum de estudio de la banda. El proceso de grabación se inició a 
-                mediados de enero del año 2020, con la colaboración del productor Nick Raskulinecz, quien ya había 
-                producido el tercer álbum homónimo de la banda en 2011.</p></th>
-            <th><img src="../images/covers/the-bitter-truth.jpg" alt="" width="350" height="350"></th>
-        </table>
-	</section>
-	<!--Pie de Pagina-->
+
+        <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner text-center">
+          <div class="carousel-item active" data-interval="100000">
+            <h5>Fallen</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" class=></iframe>
+            <p>Fallen es el primer álbum de estudio de la banda estadounidense Evanescence, 
+            con la discográfica Wind-up Records. Fallen fue lanzado al mercado el 4 de marzo
+            de 2003 y estuvo sesenta semanas en las listas británicas, alcanzando el primer puesto. 
+            Sin embargo, en Estados Unidos, el álbum permaneció durante más de cien semanas en las listas 
+            y su máxima posición fue el segundo puesto.</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>Anywhere but Home</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5SpQ4sf9sXFWHgUKYCZSDF?utm_source=generator" width="400" 
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>Anywhere but Home es el primer álbum en vivo/DVD de la banda de rock Evanescence, 
+            lanzado el 23 de noviembre 2004 por el sello discográfico Wind-up Records Este incluye
+            los cuatro vídeos musicales de su álbum anterior, Fallen, una hora de “Detrás de Escenas”, 
+            y la grabación del concierto en Le Zenith, París.</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>The Open Door</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lFQ9ihSNR5YD0yi0yTzdC?utm_source=generator" width="400"
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>The Open Door es el segundo álbum de estudio hecho por la banda de metal gótico estadounidense. 
+            Se lanzaron cuatro sencillos «Call Me When You're Sober», «Lithium», «Sweet Sacrifice» y «Good Enough» 
+            más uno solo promocional «Weight of the World» y el disco se ha promocionado con la gira The Open Door 
+            en tres etapas. The Open Door ha vendido más de 6 millones de copias en todo el mundo.</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>Evanescence</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3U85Q4GtR0I3VwgDOKHttO?utm_source=generator" width="400" 
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>Evanescence es el tercer álbum de estudio de la banda estadounidense de rock Evanescence. Lanzado al
+            mercado musical el 11 de octubre de 2011 a través del sello discográfico Wind-up Records, después de 
+            varios aplazamientos realizados por la misma banda. El proceso de grabación inició el 22 de febrero de 
+            2010 con el productor Steve Lillywhite en su estudio; pero más tarde dejaron de grabar con él porque 
+            «no era el adecuado».</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>Lost Whispers</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/55VNOaV0zcQqGSrjOBHKVG?utm_source=generator" width="400" 
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>Lost Whispers es el primer álbum recopilatorio de la banda estadounidense de metal Evanescence, 
+            lanzado al mercado el 6 de diciembre de 2016 a través de la discográfica Concord Bicycle Music.</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>Synthesis</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2Qg3CxIQ1Urnv700y5jP3j?utm_source=generator" width="400" 
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>Synthesis es el cuarto álbum de estudio de la banda de rock estadounidense Evanescence. 
+            Fue lanzado el 10 de noviembre de 2017 por BMG Rights Management. El álbum incluye versiones 
+            de canciones de trabajos anterior de la banda con un arreglo orquestal y elementos de música electrónica, 
+            además de dos nuevas canciones, lo que lo convierte en un álbum de estudio y un álbum de compilación.</p>
+          </div>
+          <div class="carousel-item" data-interval="100000">
+            <h5>The Bitter Truth</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4MYCjsaDaemi8Lmkj5PzkL?utm_source=generator" width="400" 
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <p>The Bitter Truth es el quinto álbum de estudio de la banda. El proceso de grabación se inició a 
+            mediados de enero del año 2020, con la colaboración del productor Nick Raskulinecz, quien ya había 
+            producido el tercer álbum homónimo de la banda en 2011.</p>
+          </div>
+        </div>
+       <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>	
 	<footer>
 		<ul>
 			<li><a href="https://open.spotify.com/artist/5nGIFgo0shDenQYSE0Sn7c"> <img src="../images/spotify-icon.png" alt="Spotify"></a></li>
@@ -118,6 +121,7 @@
 		</ul>
 	</footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
