--- a/pages/news.html
+++ b/pages/news.html
@@ -34,36 +34,20 @@
 			</ul>
 		</nav>
 	</header>
+	<section class="foot">
 	<!--Inicia Section-->
-	<!--<section class="news">
-        <table cellspacing="20px" class="newsTable">
-            <tr>
-                <th><img src="../images/news/ev-news1.jpg" alt=""></th>
-                <th><h2>EVANESCENCE Y HALESTORM EN TOUR POR USA</h2><p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
-					Venta general este viernes, 5/14, a las 10 a. m., hora local
-					Evanescence regresa a los escenarios en conciertos con Halestorm en
-					Estados Unidos este otoño. La gira comenzará el viernes 5 de noviembre en Portland, OR, y llevará a las bandas a los estadios.
-					</p></th>
-            </tr>
-			<tr>
-				<th><img src="../images/news/ev-news2.jpg" alt=""></th>
-				<th><h2>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</h2><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
-					Hoy tambien es el utlimo dia para obtener las entradas para el evento por streaming. 
-					El primer album de Evanecesce con caonciones originales en una decada, ‘The Bitter Truth,’ sera lanzado el 26 de marzo de 2021.
-				</p></th>
-			</tr>
-        </table>
-	</section> -->
 	<section class="grilla">
 		<div class="img1">
 			<img src="../images/news/ev-news1.jpg" width="400px">
 		</div>
 		<div class="text1">
-			<h2>EVANESCENCE Y HALESTORM EN TOUR POR USA</h2><p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
-				Venta general este viernes, 5/14, a las 10 a. m., hora local
-				Evanescence regresa a los escenarios en conciertos con Halestorm en
-				Estados Unidos este otoño. La gira comenzará el viernes 5 de noviembre en Portland, OR, y llevará a las bandas a los estadios.
-				</p>
+			<h2>EVANESCENCE Y HALESTORM EN TOUR POR USA</h2>
+			<p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
+			Venta general este viernes, 5/14, a las 10 a. m., hora local
+			Evanescence regresa a los escenarios en conciertos con Halestorm en
+			Estados Unidos este otoño. La gira comenzará el viernes 5 de noviembre en 
+			Portland, OR, y llevará a las bandas a los estadios.
+			</p>
 		</div>
 		<div class="img2">
 			<img src="../images/news/ev-news2.jpg" width="400px" height="209px">
@@ -87,5 +71,6 @@
 			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
 		</ul>
 	</footer>
+</section>
 </body>
 </html>
