--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
 	<!--Inicia Encabezado-->
 	<header>
 		<h1 class="banner">
-			<p>E</p>
-			<p>V</p>
-			<p>A</p>
-			<p>N</p>
-			<p>E</p>
-			<p>S</p>
-			<p>C</p>
-			<p>E</p>
-			<p>N</p>
-			<p>C</p>
-			<p>E</p>
+		EVANESCENCE
 		</h1>
 		<nav>
 			<ul class="headerMenu">
