Cambios para entrega de SASS2 y SEO

--- a/pages/album.html
+++ b/pages/album.html
@@ -4,29 +4,19 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Evanecesce - Albums</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+	<meta name="keywords" content="fallen, anywhere but home, the open door, evanescence, lost whispers, synthesis, the bitter truth">
+  <title>Evanecesce - Albums</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1 class="banner">
-			<p>E</p>
-			<p>V</p>
-			<p>A</p>
-			<p>N</p>
-			<p>E</p>
-			<p>S</p>
-			<p>C</p>
-			<p>E</p>
-			<p>N</p>
-			<p>C</p>
-			<p>E</p>
-		</h1>
+		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
-			<ul class="headerMenu">
+			<ul class="headerMenuBootstrap">
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="news.html">Noticias</a></li>
 				<li><a href="contactcs.html">Contacto</a></li>
@@ -39,7 +29,7 @@
         <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner text-center">
           <div class="carousel-item active" data-interval="100000">
-            <h5>Fallen</h5>
+            <p><strong>Fallen</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" class=></iframe>
             <p>Fallen es el primer álbum de estudio de la banda estadounidense Evanescence, 
@@ -49,7 +39,7 @@
             y su máxima posición fue el segundo puesto.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>Anywhere but Home</h5>
+            <p><strong>Anywhere but Home</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5SpQ4sf9sXFWHgUKYCZSDF?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>Anywhere but Home es el primer álbum en vivo/DVD de la banda de rock Evanescence, 
@@ -58,7 +48,7 @@
             y la grabación del concierto en Le Zenith, París.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>The Open Door</h5>
+            <p><strong>The Open Door</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lFQ9ihSNR5YD0yi0yTzdC?utm_source=generator" width="400"
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>The Open Door es el segundo álbum de estudio hecho por la banda de metal gótico estadounidense. 
@@ -67,7 +57,7 @@
             en tres etapas. The Open Door ha vendido más de 6 millones de copias en todo el mundo.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>Evanescence</h5>
+            <p><strong>Evanescence</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3U85Q4GtR0I3VwgDOKHttO?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>Evanescence es el tercer álbum de estudio de la banda estadounidense de rock Evanescence. Lanzado al
@@ -77,14 +67,14 @@
             «no era el adecuado».</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>Lost Whispers</h5>
+            <p><strong>Lost Whispers</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/55VNOaV0zcQqGSrjOBHKVG?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>Lost Whispers es el primer álbum recopilatorio de la banda estadounidense de metal Evanescence, 
             lanzado al mercado el 6 de diciembre de 2016 a través de la discográfica Concord Bicycle Music.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>Synthesis</h5>
+            <p><strong>Synthesis</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2Qg3CxIQ1Urnv700y5jP3j?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>Synthesis es el cuarto álbum de estudio de la banda de rock estadounidense Evanescence. 
@@ -93,7 +83,7 @@
             además de dos nuevas canciones, lo que lo convierte en un álbum de estudio y un álbum de compilación.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
-            <h5>The Bitter Truth</h5>
+            <p><strong>The Bitter Truth</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4MYCjsaDaemi8Lmkj5PzkL?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>The Bitter Truth es el quinto álbum de estudio de la banda. El proceso de grabación se inició a 
