--- a/pages/band.html
+++ b/pages/band.html
@@ -4,26 +4,16 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="evanescence, amy lee, tim mccord, will hunt, troy mclawhorn, emma anzai  ">
 	<title>Evanecesce - Banda</title>
 	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1 class="banner">
-			<p>E</p>
-			<p>V</p>
-			<p>A</p>
-			<p>N</p>
-			<p>E</p>
-			<p>S</p>
-			<p>C</p>
-			<p>E</p>
-			<p>N</p>
-			<p>C</p>
-			<p>E</p>
-		</h1>
+		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
 			<ul class="headerMenu">
 				<li><a href="../index.html">Home</a></li>
@@ -37,7 +27,7 @@
 	<!--Inicia div principal-->
 	<div class="containerBand">
 		<div class="imgAmy">
-			<img src="../images/band/amy.jpg" alt="" width="350" height="400">
+			<img class="imgBand" src="../images/band/amy.jpg" alt="Amy">
 		</div>
 		<div class="textAmy">
 			<h2>Amy Lee</h2>
@@ -49,7 +39,7 @@
 			mismo año, su banda fue elegida como la mejor de metal de 2006 por la Rolling Stone. </p>
 		</div>
 		<div class="imgTim">
-			<img src="../images/band/tim.jpg" alt="" width="350" height="400">
+			<img class="imgBand" src="../images/band/tim.jpg" alt="Tim">
 		</div>
 		<div class="textTim">
 			<h2>Tim McCord</h2>
@@ -58,7 +48,7 @@
 			Smile y The Snobs (2006), y actual guitarrista de la banda de rock Evanescence.</p>
 		</div>
 		<div class="imgWill">
-			<img src="../images/band/will.jpg" alt="" width="350" height="400">
+			<img class="imgBand" src="../images/band/will.jpg" alt="">
 		</div>
 		<div class="textWill">
 			<h2>Will Hunt</h2>
@@ -70,7 +60,7 @@
 			y siguió con el grupo en la gira promocional para The Open Door, la cual terminó en diciembre de ese mismo año</p>
 		</div>
 		<div class="imgTroy">
-			<img src="../images/band/troy.jpg" alt="" width="350" height="400">
+			<img class="imgBand" src="../images/band/troy.jpg" alt="">
 		</div>
 		<div class="textTroy">
 			<h2>Troy McLawhorn</h2><p>William Troy McLawhorn (nacido el 4 de noviembre de 1968) más conocido como 
@@ -78,7 +68,7 @@
 			y compositor de las bandas Evanescence, Seether, Dark New Day, DoubleDrive, Still Rain y Gibraltar.</p>
 		</div>
 		<div class="imgEmma">
-			<img src="../images/band/emma.jpg" alt="" width="350" height="400">
+			<img class="imgBand" src="../images/band/emma.jpg" alt="">
 		</div>
 		<div class="textEmma">
 			<h2>Emma Anzai</h2>
