--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="evanescence, amy lee">
-	<meta name="description" content="Fan page de Evanescen realizada para curso de desarrollo web de Coderhouse">
+	<meta name="description" content="Fan page de Evanescen realizada para curso de desarrollo web de CoderHouse">
 	<title>Evanecesce - Home</title>
 	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="css/main.css">
@@ -14,9 +14,7 @@
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1 class="banner">
-		EVANESCENCE
-		</h1>
+		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
 			<ul class="headerMenu">
 				<li><a href="index.html">Home</a></li>
