--- a/pages/contactcs.html
+++ b/pages/contactcs.html
@@ -4,27 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="evanescence, contactos">
 	<title>Evanecesce - Contaco</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1 class="banner">
-			<p>E</p>
-			<p>V</p>
-			<p>A</p>
-			<p>N</p>
-			<p>E</p>
-			<p>S</p>
-			<p>C</p>
-			<p>E</p>
-			<p>N</p>
-			<p>C</p>
-			<p>E</p>
-		</h1>
+		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
 			<ul class="headerMenu">
 				<li><a href="../index.html">Home</a></li>
