--- a/pages/news.html
+++ b/pages/news.html
@@ -4,26 +4,16 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="evanescence, novedades, conciertos">
 	<title>Evanecesce - Noticias</title>
 	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
 <body>
 	<!--Inicia Encabezado-->
 	<header>
-		<h1 class="banner">
-			<p>E</p>
-			<p>V</p>
-			<p>A</p>
-			<p>N</p>
-			<p>E</p>
-			<p>S</p>
-			<p>C</p>
-			<p>E</p>
-			<p>N</p>
-			<p>C</p>
-			<p>E</p>
-		</h1>
+		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
 			<ul class="headerMenu">
 				<li><a href="../index.html">Home</a></li>
@@ -41,7 +31,8 @@
 			<img src="../images/news/ev-news1.jpg" width="400px">
 		</div>
 		<div class="text1">
-			<h2>EVANESCENCE Y HALESTORM EN TOUR POR USA</h2>
+			
+			<p style="font-size: 23px;"><strong>EVANESCENCE Y HALESTORM EN TOUR POR USA</strong></p> 
 			<p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
 			Venta general este viernes, 5/14, a las 10 a. m., hora local
 			Evanescence regresa a los escenarios en conciertos con Halestorm en
@@ -53,7 +44,7 @@
 			<img src="../images/news/ev-news2.jpg" width="400px" height="209px">
 		</div>
 		<div class="text2">
-			<h2>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</h2><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
+			<p style="font-size: 23px;"><strong>EEVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</strong></p><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
 				Hoy tambien es el utlimo dia para obtener las entradas para el evento por streaming. 
 				El primer album de Evanecesce con caonciones originales en una decada, ‘The Bitter Truth,’ sera lanzado el 26 de marzo de 2021.
 			</p>
