Se agrega fondo y se pasa todo codigo css a sass

--- a/pages/album.html
+++ b/pages/album.html
@@ -7,7 +7,6 @@
 	<meta name="keywords" content="fallen, anywhere but home, the open door, evanescence, lost whispers, synthesis, the bitter truth">
   <title>Evanecesce - Albums</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
@@ -16,7 +15,7 @@
 	<header>
 		<h1 class="banner">EVANESCENCE</h1>
 		<nav>
-			<ul class="headerMenuBootstrap">
+			<ul class="headerMenu">
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="news.html">Noticias</a></li>
 				<li><a href="contactcs.html">Contacto</a></li>
@@ -30,8 +29,8 @@
         <div class="carousel-inner text-center">
           <div class="carousel-item active" data-interval="100000">
             <p><strong>Fallen</strong></p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
-            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" class=></iframe>
+            <iframe class="music" style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
+            height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             <p>Fallen es el primer álbum de estudio de la banda estadounidense Evanescence, 
             con la discográfica Wind-up Records. Fallen fue lanzado al mercado el 4 de marzo
             de 2003 y estuvo sesenta semanas en las listas británicas, alcanzando el primer puesto. 
