--- a/pages/news.html
+++ b/pages/news.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="evanescence, novedades, conciertos">
 	<title>Evanecesce - Noticias</title>
-	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
@@ -28,7 +27,7 @@
 	<!--Inicia Section-->
 	<section class="grilla">
 		<div class="img1">
-			<img src="../images/news/ev-news1.jpg" width="400px">
+			<img src="../images/news/ev-news1.jpg" class="imgNews" width="400px">
 		</div>
 		<div class="text1">
 			
@@ -41,10 +40,10 @@
 			</p>
 		</div>
 		<div class="img2">
-			<img src="../images/news/ev-news2.jpg" width="400px" height="209px">
+			<img src="../images/news/ev-news2.jpg" class="imgNews" width="400px" height="209px">
 		</div>
 		<div class="text2">
-			<p style="font-size: 23px;"><strong>EEVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</strong></p><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
+			<p style="font-size: 23px;"><strong>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</strong></p><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
 				Hoy tambien es el utlimo dia para obtener las entradas para el evento por streaming. 
 				El primer album de Evanecesce con caonciones originales en una decada, ‘The Bitter Truth,’ sera lanzado el 26 de marzo de 2021.
 			</p>
