--- a/pages/band.html
+++ b/pages/band.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="evanescence, amy lee, tim mccord, will hunt, troy mclawhorn, emma anzai  ">
 	<title>Evanecesce - Banda</title>
-	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="shortcut icon" href="../images/evanescence-logo.jpg" type="image/x-icon">
 </head>
@@ -30,7 +29,7 @@
 			<img class="imgBand" src="../images/band/amy.jpg" alt="Amy">
 		</div>
 		<div class="textAmy">
-			<h2>Amy Lee</h2>
+			<p style="font-size: 24px;"><strong>Amy Lee</strong></p>
 			<p>Amy Lynn Hartzler (nacida Amy Lynn Lee; Riverside, California; 13 de diciembre de 1981), 
 			más conocida como Amy Lee, es una cantante, pianista de formación clásica, diseñadora y compositora estadounidense.
 			Es la cofundadora y vocalista de la banda estadounidense de metal alternativo Evanescence. Sus influencias van desde
@@ -42,7 +41,7 @@
 			<img class="imgBand" src="../images/band/tim.jpg" alt="Tim">
 		</div>
 		<div class="textTim">
-			<h2>Tim McCord</h2>
+			<p style="font-size: 24px;"><strong>Tim McCord</strong></p>
 			<p>Timothy Todd "Tim" McCord (Sacramento, California; 28 de junio de 1979) 
 			más conocido como Tim McCord, es un músico estadounidense, ex-guitarrista de The Revolution 
 			Smile y The Snobs (2006), y actual guitarrista de la banda de rock Evanescence.</p>
@@ -51,19 +50,22 @@
 			<img class="imgBand" src="../images/band/will.jpg" alt="">
 		</div>
 		<div class="textWill">
-			<h2>Will Hunt</h2>
+			<p style="font-size: 24px;"><strong>Will Hunt</strong></p>
 			<p>William Martin Hunt (Gainesville, Florida; 5 de septiembre de 1971) 
-			más conocido como Will Hunt, es un baterista estadounidense. Actualmente integra las bandas 
-			Device, Dark New Day y Evanescence. Hunt estuvo en Skrape hasta 2004 y tocó en vivo y grabó con 
-			bandas y artistas como Tommy Lee, Mötley Crüe, Bloodsimple, Slaughter, Static-X, entre otros. 
-			En mayo del 2007, Hunt fue nombrado como el reemplazo para el exbaterista Rocky Gray de Evanescence, 
-			y siguió con el grupo en la gira promocional para The Open Door, la cual terminó en diciembre de ese mismo año</p>
+			más conocido como Will Hunt, es un baterista estadounidense. Actualmente 
+			integra las bandas Device, Dark New Day y Evanescence. Hunt estuvo en 
+			Skrape hasta 2004 y tocó en vivo y grabó con bandas y artistas como 
+			Tommy Lee, Mötley Crüe, Bloodsimple, Slaughter, Static-X, entre otros. 
+			En mayo del 2007, Hunt fue nombrado como el reemplazo para el 
+			exbaterista Rocky Gray de Evanescence, y siguió con el grupo en la 
+			gira promocional para The Open Door, la cual terminó en diciembre de ese mismo año</p>
 		</div>
 		<div class="imgTroy">
 			<img class="imgBand" src="../images/band/troy.jpg" alt="">
 		</div>
 		<div class="textTroy">
-			<h2>Troy McLawhorn</h2><p>William Troy McLawhorn (nacido el 4 de noviembre de 1968) más conocido como 
+			<p style="font-size: 24px;"><strong>Troy McLawhorn</strong></p>
+			<p>William Troy McLawhorn (nacido el 4 de noviembre de 1968) más conocido como 
 			Troy Mclawhorn es un músico, compositor y productor musical estadounidense que ha sido guitarrista, vocalista
 			y compositor de las bandas Evanescence, Seether, Dark New Day, DoubleDrive, Still Rain y Gibraltar.</p>
 		</div>
@@ -71,7 +73,7 @@
 			<img class="imgBand" src="../images/band/emma.jpg" alt="">
 		</div>
 		<div class="textEmma">
-			<h2>Emma Anzai</h2>
+			<p style="font-size: 24px;"><strong>Emma Anzai</strong></p>
 			<p>Emma Anzai (30 de abril de 1981), es la bajista y corista de la banda australiana de post-grunge 
 			Sick Puppies y de la banda Evanecesce</p>
 		</div>
