Cambios en tamaños de imagenes, atiributos y resposive

--- a/pages/album.html
+++ b/pages/album.html
@@ -31,17 +31,17 @@
             <p><strong>Fallen</strong></p>
             <iframe class="music" style="border-radius:12px" src="https://open.spotify.com/embed/album/02w1xMzzdF2OJxTeh1basm?utm_source=generator" width="400"
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>Fallen es el primer álbum de estudio de la banda estadounidense Evanescence, 
+            <p class="albumText hide">Fallen es el primer álbum de estudio de la banda estadounidense Evanescence,
             con la discográfica Wind-up Records. Fallen fue lanzado al mercado el 4 de marzo
-            de 2003 y estuvo sesenta semanas en las listas británicas, alcanzando el primer puesto. 
-            Sin embargo, en Estados Unidos, el álbum permaneció durante más de cien semanas en las listas 
+            de 2003 y estuvo sesenta semanas en las listas británicas, alcanzando el primer puesto.
+            Sin embargo, en Estados Unidos, el álbum permaneció durante más de cien semanas en las listas
             y su máxima posición fue el segundo puesto.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
             <p><strong>Anywhere but Home</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5SpQ4sf9sXFWHgUKYCZSDF?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>Anywhere but Home es el primer álbum en vivo/DVD de la banda de rock Evanescence, 
+            <p class="albumText">Anywhere but Home es el primer álbum en vivo/DVD de la banda de rock Evanescence, 
             lanzado el 23 de noviembre 2004 por el sello discográfico Wind-up Records Este incluye
             los cuatro vídeos musicales de su álbum anterior, Fallen, una hora de “Detrás de Escenas”, 
             y la grabación del concierto en Le Zenith, París.</p>
@@ -50,7 +50,7 @@
             <p><strong>The Open Door</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lFQ9ihSNR5YD0yi0yTzdC?utm_source=generator" width="400"
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>The Open Door es el segundo álbum de estudio hecho por la banda de metal gótico estadounidense. 
+            <p class="albumText">The Open Door es el segundo álbum de estudio hecho por la banda de metal gótico estadounidense. 
             Se lanzaron cuatro sencillos «Call Me When You're Sober», «Lithium», «Sweet Sacrifice» y «Good Enough» 
             más uno solo promocional «Weight of the World» y el disco se ha promocionado con la gira The Open Door 
             en tres etapas. The Open Door ha vendido más de 6 millones de copias en todo el mundo.</p>
@@ -59,7 +59,7 @@
             <p><strong>Evanescence</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3U85Q4GtR0I3VwgDOKHttO?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>Evanescence es el tercer álbum de estudio de la banda estadounidense de rock Evanescence. Lanzado al
+            <p class="albumText">Evanescence es el tercer álbum de estudio de la banda estadounidense de rock Evanescence. Lanzado al
             mercado musical el 11 de octubre de 2011 a través del sello discográfico Wind-up Records, después de 
             varios aplazamientos realizados por la misma banda. El proceso de grabación inició el 22 de febrero de 
             2010 con el productor Steve Lillywhite en su estudio; pero más tarde dejaron de grabar con él porque 
@@ -69,14 +69,14 @@
             <p><strong>Lost Whispers</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/55VNOaV0zcQqGSrjOBHKVG?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>Lost Whispers es el primer álbum recopilatorio de la banda estadounidense de metal Evanescence, 
+            <p class="albumText">Lost Whispers es el primer álbum recopilatorio de la banda estadounidense de metal Evanescence, 
             lanzado al mercado el 6 de diciembre de 2016 a través de la discográfica Concord Bicycle Music.</p>
           </div>
           <div class="carousel-item" data-interval="100000">
             <p><strong>Synthesis</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2Qg3CxIQ1Urnv700y5jP3j?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>Synthesis es el cuarto álbum de estudio de la banda de rock estadounidense Evanescence. 
+            <p class="albumText">Synthesis es el cuarto álbum de estudio de la banda de rock estadounidense Evanescence. 
             Fue lanzado el 10 de noviembre de 2017 por BMG Rights Management. El álbum incluye versiones 
             de canciones de trabajos anterior de la banda con un arreglo orquestal y elementos de música electrónica, 
             además de dos nuevas canciones, lo que lo convierte en un álbum de estudio y un álbum de compilación.</p>
@@ -85,7 +85,7 @@
             <p><strong>The Bitter Truth</strong></p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4MYCjsaDaemi8Lmkj5PzkL?utm_source=generator" width="400" 
             height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            <p>The Bitter Truth es el quinto álbum de estudio de la banda. El proceso de grabación se inició a 
+            <p class="albumText">The Bitter Truth es el quinto álbum de estudio de la banda. El proceso de grabación se inició a 
             mediados de enero del año 2020, con la colaboración del productor Nick Raskulinecz, quien ya había 
             producido el tercer álbum homónimo de la banda en 2011.</p>
           </div>
