--- a/pages/band.html
+++ b/pages/band.html
@@ -31,8 +31,8 @@
 		<div class="textAmy">
 			<p style="font-size: 24px;"><strong>Amy Lee</strong></p>
 			<p>Amy Lynn Hartzler (nacida Amy Lynn Lee; Riverside, California; 13 de diciembre de 1981), 
-			más conocida como Amy Lee, es una cantante, pianista de formación clásica, diseñadora y compositora estadounidense.
-			Es la cofundadora y vocalista de la banda estadounidense de metal alternativo Evanescence. Sus influencias van desde
+			más conocida como <strong>Amy Lee</strong>, es una cantante, pianista de formación clásica, diseñadora y compositora estadounidense.
+			Es la <strong>cofundadora y vocalista</strong> de la banda estadounidense de metal alternativo <strong>Evanescence</strong>. Sus influencias van desde
 			música clásica como Mozart a artistas modernos como Björk, Depeche Mode, Nirvana, Tori Amos y Plumb. En 2006 fue incluida
 			en el puesto n.º 69 entre los 100 mejores vocalistas de metal de todos los tiempos por la revista Hit Parade, y, en el
 			mismo año, su banda fue elegida como la mejor de metal de 2006 por la Rolling Stone. </p>
@@ -47,7 +47,7 @@
 			Smile y The Snobs (2006), y actual guitarrista de la banda de rock Evanescence.</p>
 		</div>
 		<div class="imgWill">
-			<img class="imgBand" src="../images/band/will.jpg" alt="">
+			<img class="imgBand" src="../images/band/will.jpg" alt="Will">
 		</div>
 		<div class="textWill">
 			<p style="font-size: 24px;"><strong>Will Hunt</strong></p>
@@ -61,7 +61,7 @@
 			gira promocional para The Open Door, la cual terminó en diciembre de ese mismo año</p>
 		</div>
 		<div class="imgTroy">
-			<img class="imgBand" src="../images/band/troy.jpg" alt="">
+			<img class="imgBand" src="../images/band/troy.jpg" alt="Troy">
 		</div>
 		<div class="textTroy">
 			<p style="font-size: 24px;"><strong>Troy McLawhorn</strong></p>
@@ -70,7 +70,7 @@
 			y compositor de las bandas Evanescence, Seether, Dark New Day, DoubleDrive, Still Rain y Gibraltar.</p>
 		</div>
 		<div class="imgEmma">
-			<img class="imgBand" src="../images/band/emma.jpg" alt="">
+			<img class="imgBand" src="../images/band/emma.jpg" alt="Emma">
 		</div>
 		<div class="textEmma">
 			<p style="font-size: 24px;"><strong>Emma Anzai</strong></p>
