--- a/pages/news.html
+++ b/pages/news.html
@@ -27,11 +27,11 @@
 	<!--Inicia Section-->
 	<section class="grilla">
 		<div class="img1">
-			<img src="../images/news/ev-news1.jpg" class="imgNews" width="400px">
+			<img src="../images/news/ev-news1.jpg" class="imgNews" alt="Evanescence y Halestrom Tour">
 		</div>
 		<div class="text1">
 			
-			<p style="font-size: 23px;"><strong>EVANESCENCE Y HALESTORM EN TOUR POR USA</strong></p> 
+			<p class="newsText"><strong>EVANESCENCE Y HALESTORM EN TOUR POR USA</strong></p> 
 			<p>Evanescence anuncia gira por estados unidos en otoño de 2021 con Halestorm
 			Venta general este viernes, 5/14, a las 10 a. m., hora local
 			Evanescence regresa a los escenarios en conciertos con Halestorm en
@@ -40,27 +40,26 @@
 			</p>
 		</div>
 		<div class="img2">
-			<img src="../images/news/ev-news2.jpg" class="imgNews" width="400px" height="209px">
+			<img src="../images/news/ev-news2.jpg" class="imgNews" alt="Anuncio The Bitter Truth">
 		</div>
 		<div class="text2">
-			<p style="font-size: 23px;"><strong>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</strong></p><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
+			<p class="newsText"><strong>EVANESCENCE ANUNCIA NUEVA CANCION “YEAH RIGHT” Y ‘THE BITTER TRUTH’ PRE-VENTA!</strong></p><p>‘The Bitter Truth’ Pre-venta disponible AHORA. 
 				Hoy tambien es el utlimo dia para obtener las entradas para el evento por streaming. 
 				El primer album de Evanecesce con caonciones originales en una decada, ‘The Bitter Truth,’ sera lanzado el 26 de marzo de 2021.
 			</p>
 		</div>
 		
 	</section>
-	<!--Pie de Pagina-->
-	<footer>
-		<ul>
-			<li><a href="https://open.spotify.com/artist/5nGIFgo0shDenQYSE0Sn7c"> <img src="../images/spotify-icon.png" alt="Spotify"></a></li>
-			<li><a href="https://deezer.page.link/fVvh1EuoF1GZTSFt7"> <img src="../images/deezer-icon.png" alt="Deezer"></a></li>
-			<li><a href="https://www.youtube.com/channel/UCJeH7gl6PbDVV4DTldIOPOA"> <img src="../images/youtube-icon.png" alt="Youtube"></a></li>
-			<li><a href="https://www.instagram.com/evanescenceofficial/"> <img src="../images/instagram-icon.png" alt="Instagram"></a></li>
-			<li><a href="https://twitter.com/evanescence"> <img src="../images/twitter-icon.png" alt="Twitter"></a></li>
-			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
-		</ul>
-	</footer>
 </section>
+<footer>
+	<ul>
+		<li><a href="https://open.spotify.com/artist/5nGIFgo0shDenQYSE0Sn7c"> <img src="../images/spotify-icon.png" alt="Spotify"></a></li>
+		<li><a href="https://deezer.page.link/fVvh1EuoF1GZTSFt7"> <img src="../images/deezer-icon.png" alt="Deezer"></a></li>
+		<li><a href="https://www.youtube.com/channel/UCJeH7gl6PbDVV4DTldIOPOA"> <img src="../images/youtube-icon.png" alt="Youtube"></a></li>
+		<li><a href="https://www.instagram.com/evanescenceofficial/"> <img src="../images/instagram-icon.png" alt="Instagram"></a></li>
+		<li><a href="https://twitter.com/evanescence"> <img src="../images/twitter-icon.png" alt="Twitter"></a></li>
+		<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
+	</ul>
+</footer>
 </body>
 </html>
