--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 	</header>
 	<!--Inicia Section-->
 	<section class="container">
-		<img src="images/Evanescence.jpg" class="indexImg">
-		<p>Evanescence es una banda de rock estadounidense fundad en Little Rock, Arcansas en 1995, por la cantenta, pianista y compositora Amy Lee y el guitarrista Ben Moody. </p>
-		<p>Actualmente la banda cuenta con:</p>
+		<img src="images/Evanescence.jpg" class="indexImg" alt="Evanescence Banda">
+		<p class="albumText">Evanescence es una banda de rock estadounidense fundad en Little Rock, 
+		Arcansas en 1995, por la cantenta, pianista y compositora Amy Lee y el
+		guitarrista Ben Moody. Actualmente la banda cuenta con:</p> 
 		<ul>
 			<li>Amy Lee - Voz lider, teclados, piano</li>
 			<li>Tim McCord - Guitarra ritmica</li>
