--- a/pages/contactcs.html
+++ b/pages/contactcs.html
@@ -26,7 +26,7 @@
 	</header>
 	<section class="foot">
 	<!--Inicia Section-->
-	<section class="row center">
+	<section class="row no-gutters center">
 		<form >
 			<div class="form-group col-13">
 			  <label for="name" class="col-lg-offset-2" >Nombre</label>
@@ -46,7 +46,7 @@
 		    </div>
 		</form>		
 	</section>	  
-
+	</section>
 	<!--Pie de Pagina-->
 	<footer>
 		<ul>
@@ -58,7 +58,6 @@
 			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
 		</ul>
 	</footer>
-	</section>
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
