--- a/pages/band.html
+++ b/pages/band.html
@@ -31,8 +31,8 @@
 		<div class="textAmy">
 			<p style="font-size: 24px;"><strong>Amy Lee</strong></p>
 			<p>Amy Lynn Hartzler (nacida Amy Lynn Lee; Riverside, California; 13 de diciembre de 1981), 
-			más conocida como <strong>Amy Lee</strong>, es una cantante, pianista de formación clásica, diseñadora y compositora estadounidense.
-			Es la <strong>cofundadora y vocalista</strong> de la banda estadounidense de metal alternativo <strong>Evanescence</strong>. Sus influencias van desde
+			más conocida como Amy Lee, es una <span><strong>cantante, pianista</strong></span> de formación clásica, diseñadora y compositora estadounidense.
+			Es la <span><strong>cofundadora y vocalista</strong></span>, de la banda estadounidense de metal alternativo <span><strong>Evanescence</strong></span>. Sus influencias van desde
 			música clásica como Mozart a artistas modernos como Björk, Depeche Mode, Nirvana, Tori Amos y Plumb. En 2006 fue incluida
 			en el puesto n.º 69 entre los 100 mejores vocalistas de metal de todos los tiempos por la revista Hit Parade, y, en el
 			mismo año, su banda fue elegida como la mejor de metal de 2006 por la Rolling Stone. </p>
@@ -43,8 +43,8 @@
 		<div class="textTim">
 			<p style="font-size: 24px;"><strong>Tim McCord</strong></p>
 			<p>Timothy Todd "Tim" McCord (Sacramento, California; 28 de junio de 1979) 
-			más conocido como Tim McCord, es un músico estadounidense, ex-guitarrista de The Revolution 
-			Smile y The Snobs (2006), y actual guitarrista de la banda de rock Evanescence.</p>
+			más conocido como Tim McCord, es un <span><strong>músico estadounidense, ex-guitarrista de The Revolution 
+			Smile y The Snobs</strong></span> (2006), y actual guitarrista de la banda de rock Evanescence.</p>
 		</div>
 		<div class="imgWill">
 			<img class="imgBand" src="../images/band/will.jpg" alt="Will">
@@ -52,7 +52,7 @@
 		<div class="textWill">
 			<p style="font-size: 24px;"><strong>Will Hunt</strong></p>
 			<p>William Martin Hunt (Gainesville, Florida; 5 de septiembre de 1971) 
-			más conocido como Will Hunt, es un baterista estadounidense. Actualmente 
+			más conocido como Will Hunt, es un <span><strong>baterista estadounidense</strong></span>. Actualmente 
 			integra las bandas Device, Dark New Day y Evanescence. Hunt estuvo en 
 			Skrape hasta 2004 y tocó en vivo y grabó con bandas y artistas como 
 			Tommy Lee, Mötley Crüe, Bloodsimple, Slaughter, Static-X, entre otros. 
@@ -66,7 +66,7 @@
 		<div class="textTroy">
 			<p style="font-size: 24px;"><strong>Troy McLawhorn</strong></p>
 			<p>William Troy McLawhorn (nacido el 4 de noviembre de 1968) más conocido como 
-			Troy Mclawhorn es un músico, compositor y productor musical estadounidense que ha sido guitarrista, vocalista
+			Troy Mclawhorn es un <span><strong>músico, compositor y productor musical</strong></span> estadounidense que ha sido guitarrista, vocalista
 			y compositor de las bandas Evanescence, Seether, Dark New Day, DoubleDrive, Still Rain y Gibraltar.</p>
 		</div>
 		<div class="imgEmma">
@@ -74,7 +74,7 @@
 		</div>
 		<div class="textEmma">
 			<p style="font-size: 24px;"><strong>Emma Anzai</strong></p>
-			<p>Emma Anzai (30 de abril de 1981), es la bajista y corista de la banda australiana de post-grunge 
+			<p>Emma Anzai (30 de abril de 1981), es la <span><strong>bajista y corista</strong></span> de la banda australiana de post-grunge 
 			Sick Puppies y de la banda Evanecesce</p>
 		</div>
 	</div>
