--- a/pages/album.html
+++ b/pages/album.html
@@ -101,12 +101,12 @@
       </div>	
 	<footer>
 		<ul>
-			<li><a href="https://open.spotify.com/artist/5nGIFgo0shDenQYSE0Sn7c"> <img src="../images/spotify-icon.png" alt="Spotify"></a></li>
-			<li><a href="https://deezer.page.link/fVvh1EuoF1GZTSFt7"> <img src="../images/deezer-icon.png" alt="Deezer"></a></li>
-			<li><a href="https://www.youtube.com/channel/UCJeH7gl6PbDVV4DTldIOPOA"> <img src="../images/youtube-icon.png" alt="Youtube"></a></li>
-			<li><a href="https://www.instagram.com/evanescenceofficial/"> <img src="../images/instagram-icon.png" alt="Instagram"></a></li>
-			<li><a href="https://twitter.com/evanescence"> <img src="../images/twitter-icon.png" alt="Twitter"></a></li>
-			<li><a href="https://www.facebook.com/Evanescence"> <img src="../images/facebook-icon.png" alt="Facebook"></a></li>
+			<li><a href="https://open.spotify.com/artist/5nGIFgo0shDenQYSE0Sn7c"> <img class="social" src="../images/spotify-icon.png" alt="Spotify"></a></li>
+			<li><a href="https://deezer.page.link/fVvh1EuoF1GZTSFt7"> <img class="social" src="../images/deezer-icon.png" alt="Deezer"></a></li>
+			<li><a href="https://www.youtube.com/channel/UCJeH7gl6PbDVV4DTldIOPOA"> <img class="social" src="../images/youtube-icon.png" alt="Youtube"></a></li>
+			<li><a href="https://www.instagram.com/evanescenceofficial/"> <img class="social" src="../images/instagram-icon.png" alt="Instagram"></a></li>
+			<li><a href="https://twitter.com/evanescence"> <img class="social" src="../images/twitter-icon.png" alt="Twitter"></a></li>
+			<li><a href="https://www.facebook.com/Evanescence"> <img class="social" src="../images/facebook-icon.png" alt="Facebook"></a></li>
 		</ul>
 	</footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
