--- a/index.html
+++ b/index.html
@@ -29,14 +29,7 @@
 		<img src="images/Evanescence.jpg" class="indexImg" alt="Evanescence Banda">
 		<p class="albumText">Evanescence es una banda de rock estadounidense fundad en Little Rock, 
 		Arcansas en 1995, por la cantenta, pianista y compositora Amy Lee y el
-		guitarrista Ben Moody. Actualmente la banda cuenta con:</p> 
-		<ul>
-			<li>Amy Lee - Voz lider, teclados, piano</li>
-			<li>Tim McCord - Guitarra ritmica</li>
-			<li>Will Hunt - Bateria</li>
-			<li>Troy McLawhorn - Guitarra principal y coros</li>
-			<li>Emma Anzai - Bajo y coros</li>
-		</ul>
+		guitarrista Ben Moody.</p> 
 	</section>
 	<!--Pie de Pagina-->
 	<footer>
